5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4071/executions/1602_825.log
== TEST (2019-03-24 17:12:56) 
-- CODE:
a=print("qual o valor do raio:")
-- OUTPUT:
qual o valor do raio:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:13:59) 
-- CODE:
a=float(input("qual o valor do raio:"))


-- OUTPUT:
qual o valor do raio:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:17:05) 
-- CODE:
a=float(input("qual o valor do raio:"))
A = pi*r**2


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    A = pi*r**2
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:19:04) 
-- CODE:
a=float(input("qual o valor do raio:"))
A = (pi*r**2)
v=(4//3*pi*r**3)
print(round(A, 3))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    A = (pi*r**2)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:19:35) 
-- CODE:
a=float(input("qual o valor do raio:"))
A = (pi*r**2)
v=(4//3*pi*r**3)
print(round(A, 3))
print(round(v, 3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    A = (pi*r**2)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:24:33) 
-- CODE:
r=float(input("qual o valor do raio:"))
from math import
A = (pi*r**2)
v=(4//3*pi*r**3)
print(round(A, 3))
print(round(v, 3))


-- ERROR:
File "XXXX", line 2
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 17:24:57) 
-- CODE:
r=float(input("leia o valor do raio:"))
from math import
A = (pi*r**2)
v=(4//3*pi*r**3)
print(round(A, 3))
print(round(v, 3))


-- EXECUTION TIME:
0.129488
-- ERROR:
  File "/home/codebench/codes/1602/825/main.py", line 2
    from math import
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:25:07) 
-- CODE:
r=float(input("leia o valor do raio:"))
from math import *
A = (pi*r**2)
v=(4//3*pi*r**3)
print(round(A, 3))
print(round(v, 3))


-- OUTPUT:
63.617
286.278
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 17:25:09) 
-- CODE:
r=float(input("leia o valor do raio:"))
from math import *
A = (pi*r**2)
v=(4//3*pi*r**3)
print(round(A, 3))
print(round(v, 3))


-- EXECUTION TIME:
0.161617
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
286.278
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
5903.307
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:25:30) 
-- CODE:
r=float(input("leia o valor do raio:"))
from math import *
A = (pi*r**2)
v=(4/3*pi*r**3)
print(round(A, 3))
print(round(v, 3))


-- OUTPUT:
63.617
381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 17:25:31) 
-- CODE:
r=float(input("leia o valor do raio:"))
from math import *
A = (pi*r**2)
v=(4/3*pi*r**3)
print(round(A, 3))
print(round(v, 3))


-- EXECUTION TIME:
0.205022
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
